# trio-serial-windows

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/trio_serial_windows/: __init__.py  _windows.py  _windows_cffi.py
test/: test_rx_tx.py
